fixed bug with z-index of navbar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -149,7 +149,7 @@ body {
     min-height: 70px;
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 200;
     width: 100%;
 }
 
